Java 17 tidy up