@@ -24,7 +24,6 @@ import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ET1_ONLINE_CASE_SOURCE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.MANUALLY_CREATED_POSITION;
@@ -59,7 +58,7 @@ public final class MultiplesHelper {
                     .filter(key -> key.getId() != null && !key.getId().equals("null"))
                     .map(caseId -> caseId.getValue().getEthosCaseReference())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
@@ -78,7 +77,7 @@ public final class MultiplesHelper {
                     .filter(caseId -> caseId.getValue().getEthosCaseReference() != null)
                     .map(caseId -> caseId.getValue().getEthosCaseReference())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
@@ -98,7 +97,7 @@ public final class MultiplesHelper {
                                     && !caseId.getValue().getEthosCaseReference().trim().equals(""))
                     .filter(distinctByValue(CaseIdTypeItem::getValue))
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
@@ -272,7 +271,7 @@ public final class MultiplesHelper {
             return multipleData.getSubMultipleCollection().stream()
                     .map(subMultipleTypeItem -> subMultipleTypeItem.getValue().getSubMultipleName())
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
         } else {
 
